src/styles.css
.ant-table-content {
  table {
    border-collapse: collapse;
  }

  thead {
    position: sticky;
    top: 32px;
    z-index: 1;
    background: #fff;
  }

  th {
    background-color: #f0f0f0;
    color: #333;
  }
}

mark {
  background-color: #ffe58f;
  padding: 0;
  border-radius: 2px;
}

@media screen and (max-width: 600px) {
  .ant-table-content {
    overflow: auto;

    thead {
      top: 0;
    }
  }
}

